--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
+# Idea
+.idea/
+*.iml
+*.iws
+*.ipr
+/*/out
+local.properties
+
+#Gradle
+.gradle/
+build/
+
+#OSx
+.DS_Store
+
 # Compiled class file
 *.class
 
